# AI-Empower-Coding-Pilot-

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.agents/skills/testing-e2e/: SKILL.md
.github/workflows/: ci.yml
backend/: __init__.py  cache.py  config.py  database.py  main.py
backend/agents/: __init__.py  accessibility.py  architect.py  base.py  coder.py  devops.py  docs.py  performance.py  reviewer.py  security.py  tester.py
backend/api/: middleware.py  schemas.py
backend/api/routes/: agents.py  approvals.py  audit.py  auth.py  autogen.py  compliance.py  cost.py  health.py  llm.py  projects.py
backend/audit/: __init__.py  logger.py
backend/auth/: __init__.py  jwt.py  models.py  store.py
backend/autogen/: __init__.py  cicd.py  docker.py  scaffolding.py  terraform.py
backend/compliance/: __init__.py  gdpr.py  hipaa.py  pci.py  soc2.py  tracker.py
backend/cost/: __init__.py  optimizer.py
backend/llm/: __init__.py  client.py
backend/models/: __init__.py  audit_log.py  db_models.py  project.py  task.py
backend/orchestration/: __init__.py  approval.py  group_chat.py  orchestrator.py  parallel.py  state_machine.py
backend/rag/: __init__.py  embeddings.py  retriever.py  vector_store.py
backend/utils/: helpers.py
backend/websocket/: __init__.py  manager.py
deploy/: aws-ecs-task.json  deploy.sh
docker/: Dockerfile.backend  Dockerfile.frontend
docs/: API.md  ARCHITECTURE.md  GCP_DEPLOYMENT.md  USER_GUIDE.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js
frontend/e2e/: auth.spec.ts  dashboard.spec.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AgentStatus.tsx  ApprovalPanel.tsx  AuditLog.tsx  (+12 more)
infra/gcp/: .gitignore  cloudbuild.yaml  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: __init__.py  conftest.py  test_agents.py  test_api.py  test_approval.py  test_audit.py  test_autogen.py  test_compliance.py  test_cost.py  test_database.py  test_group_chat.py  test_llm_multi.py  test_new_agents.py  test_orchestration.py  test_rag.py  test_websocket.py
(+38 files in other folders)
